--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "fsfw_common"]
-	path = fsfw_common
+	path = example_common
 	url = https://egit.irs.uni-stuttgart.de/fsfw/fsfw-example-common.git
 [submodule "generators/fsfwgen"]
 	path = generators/fsfwgen
