removed unrequired code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,6 @@
 cmake_minimum_required(VERSION 3.13)
 
 # set(CMAKE_VERBOSE TRUE)
-# set(RTEMS_VERBOSE TRUE)
 
 set(CMAKE_SCRIPT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
@@ -20,25 +19,12 @@ if(NOT OS_FSFW)
     set(OS_FSFW host CACHE STRING "OS for the FSFW.")
 endif()
 
-if(TGT_BSP MATCHES "arm/raspberrypi" OR TGT_BSP MATCHES "arm/beagleboneblack")
-    option(LINUX_CROSS_COMPILE OFF)
-    set(FSFW_HAL_ADD_LINUX ON)
-endif()
-
-if(TGT_BSP MATCHES "arm/raspberrypi")
-    set(FSFW_HAL_ADD_RASPBERRY_PI ON)
-endif()
-
-if(TGT_BSP MATCHES "arm/stm32h743zi-nucleo")
-    set(FSFW_HAL_ADD_STM32H7 ON)
-endif()
-
 # Perform steps like loading toolchain files where applicable.
 include(${CMAKE_SCRIPT_PATH}/PreProjectConfig.cmake)
 pre_project_config()
 
 # Project Name
-project(fsfw_example ASM C CXX)
+project(fsfw-example-hosted C CXX)
 
 
 ################################################################################
@@ -57,7 +43,7 @@ set(LIB_FSFW_HAL_NAME fsfw_hal)
 # Set path names
 set(FSFW_PATH fsfw)
 set(MISSION_PATH mission)
-set(COMMON_PATH common)
+set(COMMON_PATH example_common)
 set(TEST_PATH test)
 set(LWIP_PATH lwip)
 set(LIB_FSFW_HAL_PATH fsfw_hal)
@@ -89,16 +75,6 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         -Wno-psabi
     )
 
-    set(SHADOW_LOCAL_WARNING ON)
-    if(TGT_BSP MATCHES "arm/raspberrypi" OR TGT_BSP MATCHES "arm/beagleboneblack")
-        set(SHADOW_LOCAL_WARNING OFF)
-    endif()
-
-    if(SHADOW_LOCAL_WARNING)
-        # Some older compilers emit odd warnings if this is used.
-        set(WARNING_FLAGS ${WARNING_FLAGS} -Wshadow=local)
-    endif()
-
     set(FSFW_WARNING_FLAGS ${WARNING_FLAGS})
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     add_compile_options(/permissive- /d2SSAOptimizer-)
@@ -117,15 +93,10 @@ add_executable(${TARGET_NAME})
 if(LIB_OS_NAME)
     add_subdirectory(${LIB_OS_NAME})
 endif()
-if(ADD_LWIP_STACK)
-    add_subdirectory(${LWIP_PATH})
-endif()
 add_subdirectory(${BSP_PATH})
 add_subdirectory(${FSFW_PATH})
 add_subdirectory(${MISSION_PATH})
 add_subdirectory(${COMMON_PATH})
-add_subdirectory(${TEST_PATH})
-add_subdirectory(${LIB_FSFW_HAL_PATH})
 
 ################################################################################
 # Post-Sources preparation
@@ -163,12 +134,6 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
             "-Wl,--gc-sections"
         )
     endif()
-
-    if(TGT_BSP MATCHES "arm/stm32h743zi-nucleo")
-        target_link_options(${TARGET_NAME} PRIVATE
-            -Wl,--undefined,_printf_float -Wl,--undefined,_scanf_float
-        )
-    endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 endif()
 
@@ -182,10 +147,8 @@ target_compile_options(${TARGET_NAME} PRIVATE
     ${WARNING_FLAGS}
 )
 
-if(CMAKE_CROSSCOMPILING)
-    include(${CMAKE_SCRIPT_PATH}/HardwareOsPostConfig.cmake)
-    post_source_hw_os_config()
-endif()
+include(${CMAKE_SCRIPT_PATH}/HardwareOsPostConfig.cmake)
+post_source_hw_os_config()
 
 if(NOT CMAKE_SIZE)
     set(CMAKE_SIZE size)
@@ -216,8 +179,3 @@ add_custom_command(
 
 include (${CMAKE_SCRIPT_PATH}/BuildType.cmake)
 set_build_type()
-
-
-
-
-
