--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "tmtc/tmtccmd"]
 	path = tmtc/tmtccmd
 	url = https://github.com/spacefisch/tmtccmd.git
+[submodule "tmtc/common_tmtc"]
+	path = tmtc/common_tmtc
+	url = https://egit.irs.uni-stuttgart.de/fsfw/fsfw-example-tmtc-common.git
