smaller tweaks and project file updatss

--- a/bsp_hosted/fsfwconfig/OBSWConfig.h.in
+++ b/bsp_hosted/fsfwconfig/OBSWConfig.h.in
@@ -8,7 +8,9 @@
 
 #include <commonConfig.h>
 
-#define OBSW_TASK_PERIODIC_EVENT 0
+#define OBSW_TASK_PERIODIC_EVENT    0
+// Use a TCP server instead of a UDP server for TMTC reception
+#define OBSW_USE_TCP_SERVER         0
 
 #ifdef __cplusplus
 
