--- a/misc/eclipse/.cproject
+++ b/misc/eclipse/.cproject
@@ -25,6 +25,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.298549648" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -33,6 +34,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.373430455" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -48,6 +50,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1596645626" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -87,6 +90,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.531515655" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -96,6 +100,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1273759242" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -107,10 +112,11 @@
 								</inputType>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.assembler.base.2076450799" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.base">
-								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.1551487657" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.1551487657" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.547659187" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -144,10 +150,11 @@
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.GNU_ELF;org.eclipse.cdt.core.PE64;org.eclipse.cdt.core.ELF" id="cdt.managedbuild.target.gnu.platform.mingw.base.1711871351" name="Debug Platform" osList="win32" superClass="cdt.managedbuild.target.gnu.platform.mingw.base"/>
 							<builder arguments="--build ." autoBuildTarget="all" buildPath="${workspace_loc:/fsfw-example-hosted/build-Debug}" cleanBuildTarget="clean" command="cmake" enableAutoBuild="false" enableCleanBuild="true" enabledIncrementalBuild="true" id="cdt.managedbuild.builder.gnu.cross.1761965921" incrementalBuildTarget="" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" parallelBuildOn="true" parallelizationNumber="optimal" superClass="cdt.managedbuild.builder.gnu.cross"/>
 							<tool id="cdt.managedbuild.tool.gnu.assembler.mingw.base.13166088" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.base">
-								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.9853113" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.9853113" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1629700138" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -157,6 +164,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.766199866" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -165,6 +173,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.34963804" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -205,10 +214,11 @@
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.GNU_ELF;org.eclipse.cdt.core.PE64;org.eclipse.cdt.core.ELF" id="cdt.managedbuild.target.gnu.platform.mingw.base.169860740" name="Debug Platform" osList="win32" superClass="cdt.managedbuild.target.gnu.platform.mingw.base"/>
 							<builder arguments="--build ." autoBuildTarget="all" buildPath="${workspace_loc:/fsfw-example-hosted/build-Release}" cleanBuildTarget="clean" command="cmake" enableAutoBuild="false" enableCleanBuild="true" enabledIncrementalBuild="true" id="cdt.managedbuild.builder.gnu.cross.1108079754" incrementalBuildTarget="" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" parallelBuildOn="true" parallelizationNumber="optimal" superClass="cdt.managedbuild.builder.gnu.cross"/>
 							<tool id="cdt.managedbuild.tool.gnu.assembler.mingw.base.1193239387" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.base">
-								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.1367543610" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.both.asm.option.include.paths.1367543610" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1144625128" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -218,6 +228,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1304280824" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -226,6 +237,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/example_common/config}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/bsp_hosted/fsfwconfig}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/fsfw-example-hosted/fsfw/src}&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1156512060" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
