--- a/.gitmodules
+++ b/.gitmodules
@@ -3,13 +3,13 @@
 	url = https://egit.irs.uni-stuttgart.de/fsfw/fsfw-example-common.git
 [submodule "generators/fsfwgen"]
 	path = generators/fsfwgen
-	url = https://egit.irs.uni-stuttgart.de/fsfw/fsfw-generators.git
+	url = https://egit.irs.uni-stuttgart.de/fsfw/fsfw-gen.git
 [submodule "fsfw"]
 	path = fsfw
 	url = https://egit.irs.uni-stuttgart.de/fsfw/fsfw.git
 [submodule "tmtc/tmtccmd"]
 	path = tmtc/tmtccmd
-	url = https://github.com/spacefisch/tmtccmd.git
+	url = https://github.com/robamu-org/tmtccmd.git
 [submodule "tmtc/common_tmtc"]
 	path = tmtc/common_tmtc
 	url = https://egit.irs.uni-stuttgart.de/fsfw/fsfw-example-tmtc-common.git
