--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "tmtc/common_tmtc"]
 	path = tmtc/common_tmtc
 	url = https://egit.irs.uni-stuttgart.de/fsfw/fsfw-example-tmtc-common.git
+[submodule "tmtc/spacepackets"]
+	path = tmtc/spacepackets
+	url = https://github.com/robamu-org/py-spacepackets.git
