--- a/bsp_hosted/CMakeLists.txt
+++ b/bsp_hosted/CMakeLists.txt
@@ -1,13 +1,7 @@
-target_sources(${TARGET_NAME} 
-	PRIVATE
-		main.cpp
-)
+target_sources(${TARGET_NAME} PRIVATE main.cpp)
 
 add_subdirectory(core)
 add_subdirectory(fsfwconfig)
 add_subdirectory(utility)
 
-target_include_directories(${TARGET_NAME} 
-	PRIVATE
-		${CMAKE_CURRENT_SOURCE_DIR}
-)
+target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
