--- a/bsp_hosted/core/CMakeLists.txt
+++ b/bsp_hosted/core/CMakeLists.txt
@@ -1,5 +1,1 @@
-target_sources(${TARGET_NAME} 
-	PRIVATE
-		InitMission.cpp
-		ObjectFactory.cpp
-)
+target_sources(${TARGET_NAME} PRIVATE InitMission.cpp ObjectFactory.cpp)
