continue cfdp handler impl

--- a/bsp_hosted/core/CMakeLists.txt
+++ b/bsp_hosted/core/CMakeLists.txt
@@ -1,1 +1,2 @@
-target_sources(${TARGET_NAME} PRIVATE InitMission.cpp ObjectFactory.cpp)
+target_sources(${TARGET_NAME} PRIVATE InitMission.cpp ObjectFactory.cpp
+                                      CfdpHandler.cpp)
