move generic handler to framework

--- a/bsp_hosted/core/CMakeLists.txt
+++ b/bsp_hosted/core/CMakeLists.txt
@@ -1,2 +1,1 @@
-target_sources(${TARGET_NAME} PRIVATE InitMission.cpp ObjectFactory.cpp
-                                      CfdpHandler.cpp)
+target_sources(${TARGET_NAME} PRIVATE InitMission.cpp ObjectFactory.cpp)
